--- a/public/admin/assets/css/custom.css
+++ b/public/admin/assets/css/custom.css
@@ -1,3 +1,130 @@
 .active-bg {
     background-color: lightblue !important;
 }
+
+.meta-title {
+    font-size: 20px;
+    color: #1a0dab;
+}
+
+.canonical {
+    color: green;
+    margin-bottom: 8px;
+}
+
+.meta-description {
+    font-size: 14px;
+}
+
+.baseUrl {
+    position: absolute;
+    height: 38px;
+    line-height: 38px;
+    display: inline-block;
+    padding: 0 7px;
+    left: 0;
+    top: 29px;
+    background: linear-gradient(to bottom, #fff, #f9fafb);
+    border-color: #c4cdd5 !important;
+    border: 1px solid;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+.seo-canonical {
+    color: navy;
+}
+
+.clearfix:before {
+    content: "";
+    display: table-cell;
+}
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.sortui {
+    list-style: none;
+    padding-left: 0;
+}
+
+.sortui .ui-state-default {
+    width: calc(20% - 2px);
+    float: left;
+    padding-left: 10px;
+    margin: 0 0 10px 0;
+    margin-bottom: 10px;
+    cursor: move;
+    background: transparent;
+    box-shadow: none;
+    border: 0;
+}
+
+.sortui .ui-state-default .thumb {
+    border: 1px solid #ddd;
+    height: 150px;
+    background: #fafbfc;
+}
+
+.img-scaledown {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.img-scaledown img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: scale-down;
+}
+
+.click-to-upload {
+    text-align: center;
+    padding: 20px;
+    border: 1px dashed #b8b2b2;
+}
+
+.sortui .thumb {
+    position: relative;
+}
+
+.sortui .variant-delete-image,
+.sortui .delete-image {
+    position: absolute;
+    background: linear-gradient(to bottom, #fff, #f9fafb);
+    color: red;
+    right: 10px;
+    top: 10px;
+    border: 0;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+}
+
+.sortui .variant-delete-image:hover,
+.sortui .delete-image:hover {
+    background: red;
+    color: #fff;
+}
+
+.hidden {
+    display: none;
+}
+
+.image-post {
+    width: 75px;
+    height: 45px;
+}
+
+.img-cover {
+    padding: 10px;
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+}
